package edu.fiuba.algo3.modelo.Respuestas;

public interface Respuesta {
}
